--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body{
     color: black;
 }
 
+h1, h2, h3, h4, h5{
+    margin: 0px;
+    padding: 0px;
+}
+
 nav a{
     background-color: brown;
     padding: 10px 30px;
