--- a/style.css
+++ b/style.css
@@ -15,5 +15,21 @@ nav a{
 
 nav a:hover{
     background-color: blueviolet;
-    padding: 15px 35px;;
+    padding: 15px 35px;
+    color: white;
+}
+
+.files a{
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    margin: 5px;
+    text-decoration: none;
+    font-weight: normal;
+    display: inline-flex;
+}
+
+.files a:hover{
+    background-color: white;
+    color: black;
 }
